CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

WRAP_PROTO(PB_PLUGIN plugin.proto)

SET(TARGET proto)

#PROJECT(${TARGET})

SET(SRCS
	${PB_PLUGIN}
)

add_library(${TARGET} ${SRCS})

target_link_libraries(${TARGET}
	${PROTOBUF_LIBRARY}
)


#INSTALL(FILES ${PROJECT_SOURCE_DIR}/cmake/FindWt.cmake DESTINATION
#    ${CMAKE_INSTALL_PREFIX}/${WT_CMAKE_FINDER_INSTALL_DIR} )

